--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -1,5 +1,9 @@
 .footer {
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
+  color: #fff;
+  position:absolute;
+  bottom:0;
+  width:100%;
 }
 
 .navItems {
@@ -11,4 +15,5 @@
 .navItem {
   display: inline-block;
   margin-right: 1rem;
+  color: #fff;
 }
